syntax = "proto3";

option csharp_namespace = "Proto";
package LoginGRPC;

service LoginService {
  rpc LoginAD(LoginRequset) returns (LoginRepley) {}
  rpc ValidateToken(LoginRepley) returns (LoginRepley) {}
}

message LoginRequset {
	string username = 1;
	string password = 2;
}

message LoginRepley {
	bool loginSucsefull = 1;
	bool Admin = 2;
	string Token = 3;
}

//protoc --plugin=protoc-gen-ts="C:\sandbox\SoScienceAngularWebSite\node_modules\.bin\protoc-gen-ts.cmd" --js_out="import_style=commonjs,binary:." --ts_out="service=grpc-web:." src/app/protos/*.proto